--- a/aim1.qmd
+++ b/aim1.qmd
@@ -22,13 +22,13 @@ In this paper, we investigate the impact of urbanicity on mental health at the c
 
 ### Data
 
-Data on US counties was provided by the University of Wisconsin’s CHRR. CHRR is a Robert Wood Johnson Foundation funded program that helps local and community leaders identify county-level factors that influence the health of the community [@explore]. CHRR collects and aggregates publicly available data at the *county-level*. Therefore, this is an ecological study, and the unit of analysis for this paper is a county. We analyzed the 2021 CHRR dataset for all 3142 US counties for which data is available. This dataset includes information collected from 2015 to 2019 from the American Community Survey. Outcome data is available in the CHRR dataset from the 2018 BRFSS, which are small area estimates based on limited survey sampling across all 50 states. See [Table 5](aim1_table5.qmd) in the Appendix for the years and data sources for all covariates and mediators.
+Data on US counties was provided by the University of Wisconsin’s CHRR. CHRR is a Robert Wood Johnson Foundation funded program that helps local and community leaders identify county-level factors that influence the health of the community [@explore]. CHRR collects and aggregates publicly available data at the *county-level*. Therefore, this is an ecological study, and the unit of analysis for this paper is a county. We analyzed the 2021 CHRR dataset for all 3142 US counties for which data is available. This dataset includes information collected from 2015 to 2019 from the American Community Survey. Outcome data is available in the CHRR dataset from the 2018 BRFSS, which are small area estimates based on limited survey sampling across all 50 states. See [Table 5](#tbl-aim1_table5) in the Appendix for the years and data sources for all covariates and mediators.
 
 ### Variables
 
 #### Exposure
 
-The primary exposure is [urbanicity]{.underline}. Each county in the dataset has been assigned an urbanicity category based on the 2013 National Center for Health Statistics (NCHS) Urban–Rural Classification Scheme for Counties [@rothwell]. The NCHS urban–rural classification scheme relies on information such as population density as well as proximity to the largest city within a metropolitan statistical area. The six categories are as follows: large central metro (n = 68), large fringe metro (n = 368), medium metro (n= 372), small metro (n = 357), micropolitan (n = 641), and noncore (n = 1335). It is worth noting that the four “Metro” categories contain 85% of the total US population. A map of each county’s urbanicity designation can be accessed at <https://www.cdc.gov/nchs/data_access/urban_rural.htm>.
+The primary exposure is [urbanicity]{.underline}. Each county in the dataset has been assigned an urbanicity category based on the 2013 National Center for Health Statistics (NCHS) Urban–Rural Classification Scheme for Counties [@rothwell]. The NCHS urban–rural classification scheme relies on information such as population density as well as proximity to the largest city within a metropolitan statistical area. The six categories are as follows: large central metro (n = 68), large fringe metro (n = 368), medium metro (n= 372), small metro (n = 357), micropolitan (n = 641), and noncore (n = 1335). It is worth noting that the four “Metro” categories contain 85% of the total US population. A map of each county’s urbanicity designation can be accessed at <https://www.cdc.gov/nchs/images/popbridge/URv3.png>.
 
 #### Outcome
 
@@ -42,13 +42,13 @@ We also controlled for race/ethnicity since self-reported mental health differs 
 
 #### Potential Mediators
 
-We also wanted to understand the mechanisms by which urbanicity impacts mental health. In other words, urbanicity may lead to changes to physical environment (e.g., access to care or food) which then leads to changes in mental health outcomes. We examined eight potential mediators. ***Social associations*** is the number of membership associations in a county per 10,000 population. ***Access to exercise*** is the percentage of the population with adequate access to locations for physical activity. ***Food environment index*** is calculated as a ratio of the percent of each county’s population experiencing limited access to healthy foods to the percent of each county’s population experiencing food insecurity. The percent of the population experiencing limited access to health foods is calculated as a function of poverty and distance to a grocery store while food insecurity is a modeled estimate from the Core Food Insecurity Model [@mapthe]. ***Mental health providers*** is the ratio of population to mental health providers. ***Air pollution*** is the average daily density of fine particulate matter in micrograms per cubic meter. ***Violent crime*** is the number of reported violent crime offenses per 100,000 population. ***Severe housing cost burden*** is the percentage of households that spend 50% or more of their income on housing. ***Income inequality*** is the ratio of household income at the 80th percentile to income at the 20th percentile. See [Table 6](aim1_table6.qmd) in the Appendix for descriptive statistics of each mediator by urbanicity category.
+We also wanted to understand the mechanisms by which urbanicity impacts mental health. In other words, urbanicity may lead to changes to physical environment (e.g., access to care or food) which then leads to changes in mental health outcomes. We examined eight potential mediators. ***Social associations*** is the number of membership associations in a county per 10,000 population. ***Access to exercise*** is the percentage of the population with adequate access to locations for physical activity. ***Food environment index*** is calculated as a ratio of the percent of each county’s population experiencing limited access to healthy foods to the percent of each county’s population experiencing food insecurity. The percent of the population experiencing limited access to health foods is calculated as a function of poverty and distance to a grocery store while food insecurity is a modeled estimate from the Core Food Insecurity Model [@mapthe]. ***Mental health providers*** is the ratio of population to mental health providers. ***Air pollution*** is the average daily density of fine particulate matter in micrograms per cubic meter. ***Violent crime*** is the number of reported violent crime offenses per 100,000 population. ***Severe housing cost burden*** is the percentage of households that spend 50% or more of their income on housing. ***Income inequality*** is the ratio of household income at the 80th percentile to income at the 20th percentile. See [Table 6](#tbl-aim1_table6) in the Appendix for descriptive statistics of each mediator by urbanicity category.
 
 ### Primary Analyses
 
 We estimated the average relationship between urbanicity and poor mental health days using mixed effects linear regression models. For simplicity, we built models that compare counties from one urbanicity category at a time against small metro counties. Hence, five comparisons were made: large central metro, large fringe metro, medium metro, micropolitan, and noncore vs. small metro. Each linear regression model included poor mental health days as the dependent variable and urbanicity as the independent variable. State was included as a random effect to accommodate within-state correlation and variation due to state differences in BRFSS approaches.
 
-Models were fit with and without adjustments for the control variables. Control variables were accounted for using inverse probability weighting (IPW). IPW entails weighting each county by the multiplicative inverse of the propensity scores, i.e., the probability of belonging to the county’s urbanicity category conditional on the confounding variables (i.e., education, income, age, percent Black, and percent Hispanic). This approach was used as opposed to including control variables directly in the model to avoid issues with misspecification of their influence in the linear regression model. Propensity scores needed for IPW were calculated from a logistic regression model for each urbanicity comparison. Hence, five logistic regression models were fit. Small metro was chosen as the reference category to avoid propensity scores near 0 or 1, since small metro is one of the middle urban categories. By contrast, an urban category at one extreme (e.g., large central metro) would lead to propensities close to 0 or 1 when compared to the other extreme (e.g. noncore). Education, income, percent Black, percent Hispanic, and age are treated as independent variables in each logistic regression model. Considering that education and income have a strong relationship to mental health [@araya2003] and vary greatly across counties, an interaction term between income and education is included in the logistic regression model. In addition, natural cubic splines with three degrees of freedom each were used for education and household income. To validate this choice of model, other models were considered and compared to our model based on Akaike Information Criteria (AIC) (see [Table 7](aim1_table7.qmd) in the Appendix).
+Models were fit with and without adjustments for the control variables. Control variables were accounted for using inverse probability weighting (IPW). IPW entails weighting each county by the multiplicative inverse of the propensity scores, i.e., the probability of belonging to the county’s urbanicity category conditional on the confounding variables (i.e., education, income, age, percent Black, and percent Hispanic). This approach was used as opposed to including control variables directly in the model to avoid issues with misspecification of their influence in the linear regression model. Propensity scores needed for IPW were calculated from a logistic regression model for each urbanicity comparison. Hence, five logistic regression models were fit. Small metro was chosen as the reference category to avoid propensity scores near 0 or 1, since small metro is one of the middle urban categories. By contrast, an urban category at one extreme (e.g., large central metro) would lead to propensities close to 0 or 1 when compared to the other extreme (e.g. noncore). Education, income, percent Black, percent Hispanic, and age are treated as independent variables in each logistic regression model. Considering that education and income have a strong relationship to mental health [@araya2003] and vary greatly across counties, an interaction term between income and education is included in the logistic regression model. In addition, natural cubic splines with three degrees of freedom each were used for education and household income. To validate this choice of model, other models were considered and compared to our model based on Akaike Information Criteria (AIC) (see [Table 7](#tbl-aim1_table7) in the Appendix).
 
 ### Mediation Analysis
 
@@ -58,17 +58,75 @@ Mediation analysis was conducted in two steps [@imai2010; @vanderweele2014]. Fir
 
 ### County Characteristics by Urbanicity
 
-County characteristics are summarized by urbanicity category in [Table 1](aim1_table1.qmd). Briefly, the more urban counties tended to be more educated and younger, and to have a higher median income and a larger proportion of Black and Hispanic residents. The proportions of Black and Hispanic residents tended to be similar across urbanicity categories, with slightly higher proportions of Hispanic residents than Black residents in micropolitan and noncore counties. Without controlling for any variables, we also found that the more urban categories tended to have better mental health in terms of average poor mental health days (see Fig. [1](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9838413/figure/Fig1/) in the Appendix). Residents in large central metro counties reported the lowest average poor mental health days: 4.35 days. Residents in micropolitan counties reported the highest: 4.74 days. As expected, income and education are strongly protective of mental health, with counties with higher education and income levels having lower average poor mental health days (see Figs.[2](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9838413/figure/Fig2/), [33](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9838413/figure/Fig3/) in the Appendix for plots of these relationships).
+County characteristics are summarized by urbanicity category in [Table 1](#tbl-aim1_table1). Briefly, the more urban counties tended to be more educated and younger, and to have a higher median income and a larger proportion of Black and Hispanic residents. The proportions of Black and Hispanic residents tended to be similar across urbanicity categories, with slightly higher proportions of Hispanic residents than Black residents in micropolitan and noncore counties. Without controlling for any variables, we also found that the more urban categories tended to have better mental health in terms of average poor mental health days (see [Figure 1](#fig-aim1_fig1) in the Appendix). Residents in large central metro counties reported the lowest average poor mental health days: 4.35 days. Residents in micropolitan counties reported the highest: 4.74 days. As expected, income and education are strongly protective of mental health, with counties with higher education and income levels having lower average poor mental health days (see [Figure 2](#fig-aim1_fig2) and [Figure 3](#fig-aim1_fig3) in the Appendix for plots of these relationships).
+
+#### Table 1: Mean (SD) Characteristics of US Counties by Urbanicity Category
+
+::: {.table #tbl-aim1_table1}
+| Characteristic                        | Large Central Metro | Large Fringe Metro | Medium Metro | Small Metro | Micropolitan | Noncore     | Overall     |
+|---------|---------|---------|---------|---------|---------|---------|---------|
+| **n**                                 | 68                  | 368                | 372          | 357         | 641          | 1335        | 3141        |
+| **Some college (%)**                  | 70 (8)              | 64 (11)            | 61 (11)      | 61 (11)     | 57 (11)      | 55 (12)     | 58 (12)     |
+| **Median household income (\$K)**     | 70.7 (18.8)         | 74.6 (19.0)        | 59.6 (12.0)  | 56.6 (10.1) | 53.1 (11.1)  | 49.7 (9.8)  | 55.7 (14.5) |
+| **Over 65 (%)**                       | 14 (2)              | 17 (3)             | 18 (4)       | 19 (5)      | 19 (4)       | 22 (5)      | 20 (5)      |
+| **Black (%)**                         | 21 (14)             | 11 (14)            | 11 (14)      | 9 (12)      | 8 (14)       | 8 (15)      | 9 (14)      |
+| **Hispanic (%)**                      | 20 (15)             | 10 (10)            | 11 (15)      | 9 (12)      | 11 (16)      | 9 (14)      | 10 (14)     |
+| **Poor mental health days per month** | 4.35 (0.49)         | 4.43 (0.57)        | 4.68 (0.54)  | 4.66 (0.65) | 4.74 (0.64)  | 4.72 (0.73) | 4.67 (0.67) |
+:::
+
 
 ### Average Relationship to Urbanicity
 
-Our first analysis included a random effect for within-state correlation and controls for county sociodemographic composition (i.e. income, education, race/ethnicity, and age; see [Table 2](aim1_table2.qmd). When we only included the random effect for within-state correlation, we found that small metro counties differ significantly in average poor mental health days compared to every other urbanicity category. In this case, the more urban counties had progressively fewer average poor mental health days, whereas the less urban counties had progressively more poor average mental health days. When adjusting for state *and* sociodemographic composition, only counties at the extreme ends of urbanicity, i.e. either large central metro or noncore, differed significantly in average poor mental health from small metro counties. Adjusted estimates indicated that large central metro counties had an average of 0.24 *fewer* poor mental health days than small metro counties ($t = -5.78, df = 423, p < 0.001$), ($t = -5.78, df = 423, p < 0.001$), whereas noncore counties had an average of 0.07 *more* poor mental health days than small metro counties ($t = 3.06, df = 1690, p = 0.002$).
+Our first analysis included a random effect for within-state correlation and controls for county sociodemographic composition (i.e. income, education, race/ethnicity, and age; see [Table 2](#tbl-aim1_table2). When we only included the random effect for within-state correlation, we found that small metro counties differ significantly in average poor mental health days compared to every other urbanicity category. In this case, the more urban counties had progressively fewer average poor mental health days, whereas the less urban counties had progressively more poor average mental health days. When adjusting for state *and* sociodemographic composition, only counties at the extreme ends of urbanicity, i.e. either large central metro or noncore, differed significantly in average poor mental health from small metro counties. Adjusted estimates indicated that large central metro counties had an average of 0.24 *fewer* poor mental health days than small metro counties ($t = -5.78, df = 423, p < 0.001$), ($t = -5.78, df = 423, p < 0.001$), whereas noncore counties had an average of 0.07 *more* poor mental health days than small metro counties ($t = 3.06, df = 1690, p = 0.002$).
+
+#### Table 2: Average Effect of Urbanicity on Poor Mental Health Days
+
+::: {.table #tbl-aim1_table2}
+| Urbanicity Category     | State Variation Only (Estimate \[95% CI\]) | t    | df    | p        | State Variation and Demographic Effects (Estimate \[95% CI\]) | t     | df   | p        |
+|--------|--------|--------|--------|--------|--------|--------|--------|--------|
+| **Large Central Metro** | − 0.31 (− 0.40, − 0.22)                    | −6.8 | 388.2 | \< 0.001 | − 0.24 (− 0.31, − 0.16)                                       | −5.78 | 423  | \< 0.001 |
+| **Large Fringe Metro**  | − 0.26 (− 0.32, − 0.21)                    | −9.2 | 689.5 | \< 0.001 | − 0.04 (− 0.10, 0.01)                                         | −1.49 | 723  | 0.14     |
+| **Medium Metro**        | − 0.06 (− 0.11, − 0.01)                    | −2.5 | 686.2 | 0.01     | − 0.003 (− 0.05, 0.04)                                        | −0.14 | 727  | 0.89     |
+| **Micropolitan**        | 0.11 (0.07, 0.15)                          | 5.2  | 952.9 | \< 0.001 | − 0.004 (− 0.05, 0.04)                                        | −0.17 | 996  | 0.86     |
+| **Noncore**             | 0.21 (0.17, 0.25)                          | 10.7 | 1652  | \< 0.001 | 0.072 (0.026, 0.12)                                           | 3.06  | 1690 | 0.002    |
+:::
 
 ### Mediation
 
-Our next analysis investigated whether the differences between large central metro or noncore counties and small metro counties could be explained by specific features of an urban or rural environment. [Table 3](aim1_table3.qmd) shows the average effect of each potential mediator on poor mental health days when all mediators are included in the model for poor mental health days. We will summarize the top 4 significant effects. The food environment index had the largest coefficient for both comparisons (i.e. large central metro vs. small metro and noncore vs. small metro), whereby a better food environment was related to better average mental health. Access to exercise had the next largest coefficient for both comparisons and was also positively related to better average mental health. Violent crime had the third largest coefficient for both comparisons and was negatively related to a county’s mental health. Finally, income inequality had the fourth largest coefficient for both comparisons and was also negatively related to a county’s mental health.
+Our next analysis investigated whether the differences between large central metro or noncore counties and small metro counties could be explained by specific features of an urban or rural environment. [Table 3](#tbl-aim1_table3) shows the average effect of each potential mediator on poor mental health days when all mediators are included in the model for poor mental health days. We will summarize the top 4 significant effects. The food environment index had the largest coefficient for both comparisons (i.e. large central metro vs. small metro and noncore vs. small metro), whereby a better food environment was related to better average mental health. Access to exercise had the next largest coefficient for both comparisons and was also positively related to better average mental health. Violent crime had the third largest coefficient for both comparisons and was negatively related to a county’s mental health. Finally, income inequality had the fourth largest coefficient for both comparisons and was also negatively related to a county’s mental health.
 
-Most of the potential mediators had a strong direct effect on poor mental health days, but they still might not mediate the relationship between urbanicity and poor mental health. Thus, our final analysis estimated natural indirect effects, i.e. the effects of changes in mediators that are related to urbanicity. Natural direct and indirect effects are summarized in [Table 4](aim1_table4.qmd). For the large central metro vs. small metro comparison, the natural indirect effect was marginally significant: 0.11 fewer poor mental health days (95% CI: 0.22 to 0.02) were attributed to changes in the potential mediators related to being a large central metro county. In other words, about 46% (0.11/0.24) of the relationship between large central metro and poor mental health was mediated by factors such as food environment, access to exercise, violent crime, and income inequality. By contrast, the relationship between noncore and poor mental health was not mediated by these factors, as the natural indirect effect for the noncore vs. small metro comparison was nearly zero: 0.005 (95% CI: 0.07 to 0.11). This could be because the average number of self-reported poor mental health days in noncore counties was only 0.07 higher than the average number of self-reported poor mental health days in small metro counties, or perhaps there were additional unmeasured mediating factors at play.
+#### Table 3: Average Effect of Each Potential Mediator on Poor Mental Health Days
+
+::: {.table #tbl-aim1_table3}
+| Mediator                    | Large Central Metro (Effect \[95% CI\]) | t      | df  | p        | Noncore (Effect \[95% CI\]) | t      | df   | p        |
+|--------|--------|--------|--------|--------|--------|--------|--------|--------|
+| **Income Inequality**       | 0.043 (0.011, 0.075)                    | 2.61   | 389 | 0.009    | 0.053 (0.028, 0.078)        | 4.17   | 1376 | \< 0.001 |
+| **Social associations**     | − 0.006 (− 0.042, 0.030)                | −0.34  | 389 | 0.73     | 0.032 (0.005, 0.058)        | 2.37   | 1376 | 0.02     |
+| **Access to exercise**      | − 0.104 (− 0.145, − 0.063)              | −5.02  | 389 | \< 0.001 | − 0.061 (− 0.082, − 0.040)  | −5.64  | 1376 | \< 0.001 |
+| **Food environment**        | − 0.187 (− 0.233, − 0.160)              | −10.49 | 389 | \< 0.001 | − 0.271 (− 0.297, − 0.246)  | −21.00 | 1376 | \< 0.001 |
+| **Mental health providers** | − 0.035 (− 0.071, − 0.0003)             | −1.98  | 389 | 0.05     | 0.050 (0.023, 0.077)        | 3.65   | 1376 | \< 0.001 |
+| **Air pollution**           | 0.018 (− 0.013, 0.049)                  | 1.12   | 389 | 0.26     | − 0.043 (− 0.070, − 0.016)  | −3.16  | 1376 | 0.002    |
+| **Violent crime**           | 0.062 (0.026, 0.097)                    | 3.44   | 389 | \< 0.001 | 0.048 (0.030, 0.067)        | 5.16   | 1376 | \< 0.001 |
+| **Severe housing cost**     | − 0.030 (− 0.073, 0.014)                | −1.34  | 389 | 0.18     | − 0.012 (− 0.037, 0.014)    | −0.91  | 1376 | 0.36     |
+:::
+
+------------------------------------------------------------------------
+
+#### Table 4: Mediating Effects Between Urbanicity and Average Poor Mental Health Days
+
+::: {.table #tbl-aim1_table4}
+| Mediating Effect                | Large Central Metro (Effect \[95% CI\]) | Noncore (Effect \[95% CI\]) |
+|----------------------|----------------------------|----------------------|
+| **Total natural direct effect** | − 0.13 (− 0.14, − 0.13)                 | 0.09 (0.09, 0.09)           |
+| **Natural indirect effects**    |                                         |                             |
+| **Total**                       | − 0.11 (− 0.22, 0.02)                   | 0.005 (− 0.07, 0.11)        |
+| **Food environment**            | − 0.07 (− 0.14, 0.00)                   | 0.01 (− 0.06, 0.07)         |
+| **Violent crime**               | 0.10 (0.01, 0.19)                       | − 0.02 (− 0.04, 0.00)       |
+| **Housing**                     | − 0.04 (− 0.12, 0.05)                   | 0.00 (− 0.03, 0.03)         |
+| **Access to exercise**          | −                                       |                             |
+:::
+
+Most of the potential mediators had a strong direct effect on poor mental health days, but they still might not mediate the relationship between urbanicity and poor mental health. Thus, our final analysis estimated natural indirect effects, i.e. the effects of changes in mediators that are related to urbanicity. Natural direct and indirect effects are summarized in [Table 4](#tbl-aim1_table4). For the large central metro vs. small metro comparison, the natural indirect effect was marginally significant: 0.11 fewer poor mental health days (95% CI: 0.22 to 0.02) were attributed to changes in the potential mediators related to being a large central metro county. In other words, about 46% (0.11/0.24) of the relationship between large central metro and poor mental health was mediated by factors such as food environment, access to exercise, violent crime, and income inequality. By contrast, the relationship between noncore and poor mental health was not mediated by these factors, as the natural indirect effect for the noncore vs. small metro comparison was nearly zero: 0.005 (95% CI: 0.07 to 0.11). This could be because the average number of self-reported poor mental health days in noncore counties was only 0.07 higher than the average number of self-reported poor mental health days in small metro counties, or perhaps there were additional unmeasured mediating factors at play.
 
 ## Discussion
 
