--- a/intro.qmd
+++ b/intro.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Introduction"
-format: docx
+format: pdf
 editor: visual
 bibliography: references.bib
 ---
@@ -15,17 +15,17 @@ This dissertation is structured around three primary aims:
 
 2.  **Compositional Factors and Migration:** The second aim centers on compositional place-based health factors by examining how county-to-county migration flows impact models of county-level health.
 
-3.  **Integration of Contextual and Compositional Factors:** The third aim integrates both contextual and compositional place-based health factors using individual-level survey data to assess self-rated health and migration history in Lesotho.
+3.  **Integration of Contextual and Compositional Factors:** The third aim examines migration as both a contextual and a compositional place-based health factor, using spatio-temporal modeling to assess how the interaction between migration patterns and local geographic context influences premature mortality rates and contributes to health inequities.
 
 ## Defining contextual measures of health
 
 **Place**, as it relates to health, is defined not just by geographic boundaries, but by the unique set of structural and environmental characteristics that influence the health of the populations residing within them. These **contextual health factors** encompass a wide range of elements, including socioeconomic conditions, physical environment, availability of healthcare services, and social infrastructure. Understanding these factors is essential for comprehending how different places can impact health outcomes and contribute to health disparities.
 
-Numerous studies have outlined the effects of socioeconomic conditions on health, both at the individual and place-level. Areas with higher levels of poverty, unemployment, and lower educational attainment often exhibit poorer health outcomes due to limited access to resources and opportunities that promote healthy living [@diezroux2001]. Lack of economic opportunity can lead to food insecurity, inadequate housing, and reduced access to healthcare services, all of which have direct and indirect effects on the health of communities (Kawachi & Berkman, 2003). Additionally, even after controlling for individual-level health factors, neighborhood disadvantage has been shown to be related to higher rates of mortality and morbidity due to cardiovascular conditions [@diezroux2007; @pickett2001].
+Numerous studies have outlined the effects of socioeconomic conditions on health, both at the individual and place-level. Areas with higher levels of poverty, unemployment, and lower educational attainment often exhibit poorer health outcomes due to limited access to resources and opportunities that promote healthy living [@diezroux2001]. Lack of economic opportunity can lead to food insecurity, inadequate housing, and reduced access to healthcare services, all of which have direct and indirect effects on the health of communities. Additionally, even after controlling for individual-level health factors, neighborhood disadvantage has been shown to be related to higher rates of mortality and morbidity due to cardiovascular conditions [@diezroux2007; @pickett2001].
 
-Environmental and climate-related factors also play a significant role in shaping health outcomes. Factors such as air and water quality, availability of green spaces, and exposure to pollutants can significantly influence the incidence of respiratory diseases, cardiovascular conditions, and mental health disorders (Sallis et al., 2012). For instance, communities located near industrial sites may suffer from higher levels of pollution, which can lead to adverse health effects over time (Morello-Frosch et al., 2002).
+Environmental and climate-related factors also play a significant role in shaping health outcomes. Factors such as air and water quality, availability of green spaces, and exposure to pollutants can significantly influence the incidence of respiratory diseases, cardiovascular conditions, and mental health disorders. For instance, communities located near industrial sites may suffer from higher levels of pollution, which can lead to adverse health effects over time. However, environmental resources and stressors are not distributed equally, with marginalized communities, particularly people of color, disproportionately bearing the brunt of negative impacts [@environm; @banzhaf2019].
 
-Availability and accessibility of healthcare services are another crucial contextual health factor. Places with a higher density of healthcare professionals, facilities, and services tend to have better health outcomes because residents can more easily obtain preventive care, diagnoses, and treatments (Andersen & Davidson, 2001). Conversely, rural or underserved urban areas may face significant barriers to healthcare access, resulting in delayed treatments and poorer health outcomes (Probst et al., 2004).
+Availability and accessibility of healthcare services are another crucial contextual health factor. Places with a higher density of healthcare professionals, facilities, and services tend to have better health outcomes because residents can more easily obtain preventive care, diagnoses, and treatments and have higher rates of healthcare consumption on average [@andersen2014; @léonard2009]. One study, focused on maternal healthcare in particular, found that a one-unit increase in population density is associated with a 0.2% increase in maternal healthcare coverage rates on average[@hanlon2012]. Rural or underserved urban areas may face significant barriers to healthcare access, resulting in delayed treatments and poorer health outcomes.
 
 Social infrastructure, including the presence of community organizations, social networks, and public health initiatives, contributes to the health of a place. Strong social cohesion and support networks can mitigate the effects of economic and environmental stressors by providing emotional support, facilitating access to information, and promoting healthy behaviors (Berkman et al., 2000). Places with robust social infrastructure can buffer against adverse health outcomes and enhance overall community well-being.
 
@@ -85,17 +85,17 @@ These theories of migration provide a comprehensive framework for understanding 
 
 Urbanicity, migration, and environmental stressors each present unique challenges that require tailored public health strategies. A common thread is the recognition that both structural and compositional aspects of place are inherently intertwined and must be addressed together to effectively reduce health disparities.
 
-From a policy-lens, this means developing interventions sensitive to the specific contextual and compositional realities of different populations. In urban areas, improving the built environment and ensuring equitable access to resources can mitigate mental health disparities. In regions experiencing significant migration, policies should focus on supporting both the structural needs of receiving and sending communities and the health needs of migrants. Similarly, in areas like Lesotho, addressing environmental injustices and providing resources to mitigate water insecurity can improve overall well-being.
+From a policy-lens, this means developing interventions sensitive to the specific contextual and compositional realities of different populations. In urban areas, improving the built environment and ensuring equitable access to resources can mitigate mental health disparities. In regions experiencing significant migration, policies should focus on supporting both the structural needs of receiving and sending communities and the health needs of migrants.
 
 By integrating findings from diverse contexts, this dissertation highlights the necessity of a holistic approach to public health research and policy. The interrelationships between geography, migration, and health outcomes are critical areas of study that offer valuable insights for public health interventions. This dissertation addresses several key problems related to these themes, focusing on how geographical factors, migration, and environmental stressors affect mental health and overall health outcomes across different populations.
 
 Addressing health disparities requires an understanding of how place-based structural factors and individual characteristics interact to shape health outcomes. The common threads that run through the three chapters of this dissertation include the exploration of urbanicity, the impact of migration on health metrics, and the unique challenges faced by vulnerable populations in different geographical contexts.
 
-The chapters in this dissertation collectively emphasize the complex interplay between geographical factors, migration, and health outcomes, incorporating both contextual and compositional measures. By examining these relationships in different contexts, from the urban and rural counties of the United States to the resource-challenged regions of Lesotho, this work contributes to a deeper understanding of how place and movement influence health. The insights gained from these studies can guide the development of targeted public health policies and interventions aimed at improving health outcomes and reducing disparities across diverse populations. By addressing both the structural environment and the characteristics and movements of the population, policymakers can create more effective and equitable health strategies.
+The chapters in this dissertation collectively emphasize the complex interplay between geographical factors, migration, and health outcomes, incorporating both contextual and compositional measures. By examining these relationships in different contexts, this work contributes to a deeper understanding of how place and movement influence health. The insights gained from these studies can guide the development of targeted public health policies and interventions aimed at improving health outcomes and reducing disparities across diverse populations. By addressing both the structural environment and the characteristics and movements of the population, policymakers can create more effective and equitable health strategies.
 
 ## Specific Aims
 
-The first chapter of this dissertation examines the influence of urbanicity on mental health in US counties, aiming to quantify contemporary relationships between the built environment and self-reported poor mental health days. The second chapter shifts the focus to migration, investigating how county-to-county migration flows influence average health metrics and the potential misattribution of health outcome changes when migration is not considered in models. The third chapter extends the exploration to Lesotho, a region where water insecurity and migration intersect with broader socio-economic issues, assessing how these factors impact mental health and the overall well-being of displaced populations.
+The first chapter of this dissertation examines the influence of urbanicity on mental health in US counties, aiming to quantify contemporary relationships between the built environment and self-reported poor mental health days. The second chapter shifts the focus to migration, investigating how county-to-county migration flows influence average health metrics and the potential misattribution of health outcome changes when migration is not considered in models. The third chapter builds on these themes by exploring the interactions between migration patterns and premature age-adjusted mortality rates, using tensor decomposition techniques to uncover how spatial and temporal migration flows may contribute to health disparities across US counties.
 
 **Chapter 1: Urbanicity and Mental Health in US Counties**
 
@@ -105,6 +105,8 @@ Geography may influence mental health by inducing changes in social, physical, a
 
 This chapter investigates the impact of migration on county-level health outcomes in the United States, emphasizing the importance of considering compositional changes due to migration when analyzing health metrics alongside contextual county characteristics. Using mortality data from CDC WONDER and migration flow data from the IRS, the study develops novel extensions of autoregressive spatial error models to incorporate migration flows. The analysis focuses on premature age-adjusted mortality rates from 2011 to 2019, examining the influence of migration and urbanicity. The findings reveal that migration significantly improves the explainability of models for county-level health outcomes, showing that compositional changes in population due to migration, alongside contextual factors such as local healthcare infrastructure, are critical for understanding health disparities. By accounting for migration flows and health-related selection of migrants, the study provides a comprehensive understanding of the dynamic relationship between migration and health outcomes, informing more precise public health policies.
 
-**Chapter 3: Migration, Water Security, and Mental Health in Lesotho**
+**Chapter 3: Spatio-temporal analysis of county-to-county migration patterns on premature mortality**
 
-Migration patterns can significantly impact mental health as individuals navigate the challenges associated with displacement, especially in regions like Lesotho where water insecurity intersects with socio-economic issues. This chapter explores the relationship between migration, water security, and mental health, considering both compositional factors such as forced displacement and contextual factors related to environmental injustice. Using an observational cross-sectional design, data were collected from a convenience sample of 55 individuals in the Maseru district through surveys assessing demographics, mental health, migration history, water security, and environmental health perceptions. Contrary to prior findings, the study did not find significant associations between water insecurity and mental health or migration frequency. These results challenge assumptions about the direct impacts of migration on mental health and highlight the need for further research with larger, more representative samples and community-driven approaches to better understand the long-term effects of migration and environmental stressors on mental health, considering both contextual and compositional measures.
+This study examines the relationship between county-level migration patterns and premature age-adjusted mortality rates in the contiguous United States, utilizing a comprehensive spatio-temporal modeling approach. By applying Canonical Polyadic (CP) tensor decomposition to IRS county-to-county migration data from 2011 to 2019, we capture complex migration flows and their effects on health outcomes. Our analysis identifies distinct migration systems and explores how origin, destination, and temporal components contribute to variations in mortality rates across counties.
+
+Through spatial panel modeling, we demonstrate that migration patterns significantly influence health outcomes, with counties experiencing higher outmigration often facing elevated premature mortality. In contrast, certain migration flows are associated with improved health outcomes, highlighting the dual role of migration in either exacerbating or mitigating health disparities. By integrating contextual (geographical) and compositional (demographic) dimensions of place-based health, we underscore the importance of spatial and temporal factors in understanding migration’s impact on health equity. These findings suggest targeted public health interventions are necessary to address health disparities in regions with significant migration, particularly in areas with high outmigration.
