--- a/references.bib
+++ b/references.bib
@@ -2046,3 +2046,64 @@ PMCID: PMC1088996}
 	url = {https://www.sciencedirect.com/science/article/pii/S0277953616303252}
 }
 
+
+@misc{environm,
+	title = {Environmental justice and regional inequality in southern California: implications for future research.},
+	url = {https://ehp.niehs.nih.gov/doi/epdf/10.1289/ehp.02110s2149},
+	note = {DOI: 10.1289/ehp.02110s2149},
+	langid = {en}
+}
+
+@article{banzhaf2019,
+	title = {Environmental Justice: The Economics of Race, Place, and Pollution},
+	author = {Banzhaf, Spencer and Ma, Lala and Timmins, Christopher},
+	year = {2019},
+	month = {02},
+	date = {2019-02},
+	journal = {Journal of Economic Perspectives},
+	pages = {185--208},
+	volume = {33},
+	number = {1},
+	doi = {10.1257/jep.33.1.185},
+	url = {https://www.aeaweb.org/articles?id=10.1257/jep.33.1.185},
+	langid = {en}
+}
+
+@article{hanlon2012,
+	title = {Exploring the relationship between population density and maternal health coverage},
+	author = {Hanlon, Michael and Burstein, Roy and Masters, Samuel H. and Zhang, Raymond},
+	year = {2012},
+	month = {11},
+	date = {2012-11-21},
+	journal = {BMC Health Services Research},
+	pages = {416},
+	volume = {12},
+	number = {1},
+	doi = {10.1186/1472-6963-12-416},
+	url = {https://doi.org/10.1186/1472-6963-12-416},
+	langid = {en}
+}
+
+@article{andersen2014,
+	title = {Improving access to care in America: Individual and contextual indicators},
+	author = {Andersen, Ronald and Davidson, Pamela},
+	year = {2014},
+	month = {01},
+	date = {2014-01-01},
+	journal = {Changing the US Health Care System: Key Issues in Health Services Policy and Management},
+	volume = {2007}
+}
+
+@article{léonard2009,
+	title = {Association between physician density and health care consumption: A systematic review of the evidence},
+	author = {{Léonard}, Christian and Stordeur, Sabine and Roberfroid, Dominique},
+	year = {2009},
+	month = {07},
+	date = {2009-07-01},
+	journal = {Health Policy},
+	pages = {121--134},
+	volume = {91},
+	number = {2},
+	doi = {10.1016/j.healthpol.2008.11.013},
+	url = {https://www.sciencedirect.com/science/article/pii/S0168851008002789}
+}
